<resources>
    <string name="app_name">Kronos Stopwatch</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Automatic Restart</string>

    <!-- Messages Preferences -->
    <string name="minutes">Add minutes</string>
    <string name="seconds">Add seconds</string>
    <string name="minutesBreak">Add minutes</string>
    <string name="secondsBreak">Add seconds</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Enable Automatic Restart</string>
    <string name="attachment_title">Enable Break Time</string>
    <string name="attachment_summary_on">There will be break in between
    </string>
    <string name="attachment_summary_off">There will be no break in between</string>
    <string name="title_activity_settings2">Settings</string>
</resources>
