<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="Automatic Restart">

        <SwitchPreferenceCompat
            app:key="restart"
            app:title="Enable Automatic Restart" />

        <EditTextPreference
            app:dependency="restart"
            app:key="minutes"
            app:title="@string/minutes"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="restart"
            app:key="seconds"
            app:title="@string/seconds"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:dependency="restart"
            app:key="break"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

        <EditTextPreference
            app:dependency="break"
            app:key="minutesBreak"
            app:title="@string/minutes"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="break"
            app:key="secondsBreak"
            app:title="@string/seconds"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header">

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <Preference
        app:key="feedback"
        app:title="Send feedback"
        app:summary="Report technical issues or suggest new features"/>


</PreferenceScreen>
